--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^1.0.6",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
@@ -23,8 +25,11 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-spring": "^10.0.3",
+    "react-hook-form": "^7.71.1",
+    "resend": "6.7.0",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
