--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
-    "react-spring": "^10.0.3",
     "react-hook-form": "^7.71.1",
+    "react-spring": "^10.0.3",
     "resend": "6.7.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
