--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@splinetool/react-spline": "^4.1.0",
     "@types/three": "^0.182.0",
     "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
@@ -26,6 +27,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-parallax-tilt": "^1.7.319",
     "react-spring": "^10.0.3",
     "resend": "6.7.0",
     "tailwind-merge": "^3.4.0",
